# website

./: .gitignore  .gitmodules  CNAME  README.md  generate_html.sh  index.html  output.txt
.github/workflows/: cpp_tbx_workflow.yml
code/: CMakeLists.txt  Doxyfile  README.md
code/src/: update_submodules_from_here.sh
code/src/sound/sound_types/: sound_types.hpp
fsweb_generated_dir/: guide.html  index.html  infrastructure.html
html/: cpp_tbx_template.html  fast_html_config.txt  fast_html_config_continuous.txt  fast_html_template_conversion.py  guide.html  index.html  infrastructure.html  tbx_edit.html
scripts/: create_sbpt_html_files.py
subprojects/: assets.html  batcher.html  camera.html  character_update.html  client_networking.html  client_packet_types.html  client_systems_namespace.html  colors.html  config_file_parser.html  cpp_project_html_viewer.html  create_sbpt_html_files.py  draw_info.html  equivalent_datatype_conversions.html  expiring_data_container.html  fixed_frequency_loop.html  font_atlas.html  formatting.html  fps_camera.html  game_loop.html  glfw_lambda_callback_manager.html  index.html  input_snapshot.html  logger_component.html  model_loading.html  mouse.html  multiplayer_physics.html  mwe_networking.html  networked_character_data.html  networked_input_snapshot.html  opengl_texture_cache.html  packet_handler.html  packet_types.html  physics.html  physics_debug_renderer.html  rate_limited_function.html  render_primitives.html  server_networking.html  server_systems_namespace.html  shader_cache.html  shader_pipeline.html  (+16 more)
(+142 files in other folders)
